--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.firebase
+.github
+.firebaserc
 
 npm-debug.log*
 yarn-debug.log*
